# outline-convert

./: .gitignore  .swp  CI7526-b.tex  LICENSE  README.md  Shared_wfe.opml  Shared_wfe.tex  Shared_wfe.txt  article.opml  forest_article.tex  forest_beamer.tex  init_path.bat  maths.tex  ompl-result  output.opml  pyproject.toml  temp.txt  test.sh  test.tex  todo
recursive_test/: ethic_recursive.tex  ethic_recursive.txt  test.tex  test.txt  text-test.txt
src/: main.py  outline-convert.py  parser.py  renderer_latex.py  renderer_text.py
src/outline_convert/: main (Copie).txt  main.py  models.py  parser (Copie).txt  parser.py  renderer_latex.py  renderer_ppt.py  renderer_rtf.py  renderer_text.py  utils.py
test/: CI7526-b.tex  CI7526.txt  NewIgnoreTest.txt  Security_test.txt  Test_options.opml  aitest.txt  basic.txt  strip_test.opml  test2.txt  test_beamer.txt
tests/: Knowledge.opml  Knowledge.tex  Security_concepts.tex  article.txt  dunalist_forest.opml  dynalist.tex  dynalist.txt  frag_result.tex  knowledge.tex  knowledge.txt  several_links.tex  test1.opml  test1.txt  test2.txt  test3.opml  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test_maths.txt  test_s.tex  workflowyOPML.opml  workflowyOPML.tex
tests/dynalist-backup-opml-2025-07-17/: Drafts.opml
tests/dynalist-backup-opml-2025-07-17/Archive/: Cyber Lab -- Basic IT Competences.opml  Getting started with Dynalist.opml  Outlines before Coline.opml  PhD Proposal(Mast & CC)_ .opml  Report Coline Smagghe.opml
tests/dynalist-backup-opml-2025-07-17/Projects/: Beautification.opml  DSS.opml  Knowledge.opml  (+4 more)
(+68 files in other folders)
