[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "outline-convert"
version = "0.1.0"
description = "Convert between text, OPML, and LaTeX outline formats"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyperclip",
]

[project.scripts]
outline-convert = "outline_convert.main:main"

[tool.setuptools]
packages = ["outline_convert"]

[tool.setuptools.package-dir]
"" = "src"